--- a/ios/WeatherAppTemp/Info.plist
+++ b/ios/WeatherAppTemp/Info.plist
@@ -35,7 +35,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Weather App needs access to your location to show local weather information.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
